apps/default/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: default
  labels:
    app: jellyfin
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8096
  selector:
    app: jellyfin
  type: LoadBalancer
  loadBalancerIP: 192.168.1.161
