apps/default/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: default
spec:
  rules:
  - host: media.bramble.home
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
